# mereo-dw

./: .env.example  .envrc  .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
analytics/catalog/: analyze_bronze_domains.py  bronze_domain_map.yaml  bronze_domain_summary.csv  bronze_relationship_graph.json  client_table_classification.csv  dbml_model.py  dim_fact_candidates.yaml  generate_dbml_stubs.py  generate_entity_contracts.py  generate_raw_sources.py  pilot.yaml  validate_dbml_full.py
analytics/control-plane/: dashboard.template.html
analytics/dagster/: Dockerfile  pyproject.toml
analytics/dagster/mereo_analytics/: __init__.py  definitions.py
analytics/dbt/: dbt_project.yml  profiles.yml.example
analytics/docs/: client-dimensional-discovery-spec.md  dagster-raw-ingestion-map.md  entity-pipeline-spec.md  erp-raw-full-spec.md  flink-router-eval.md  gold-dimensional-wave-g1-g2.md  gold-dimensional-wave-g3.md  medallion-etl-spec.md  offset-registry.md  pipeline-observability.md  silver-architecture-decisions.md  wasabi-dr.md  (+5 more)
k8s/: 00-namespaces.yaml  README.md  sync-configmaps.sh  sync-secrets.sh
mereo_tools/: __init__.py  __main__.py  backup_local.py  backup_to_ch.py  cli.py  clone_sim.py  config.py  db.py  db_list.py  ddl_extract.py  discover.py  export_fk_graph.py  groups.py  groups.toml  inventory.py  mapping_report.py  restore_local.py  run_inventory_batches.py  schema_drift.py  schema_extract.py  seed_sim.py  teste_query.py
scripts/: sync-schema-output.sh
(+153 files in other folders)
