[project]
name = "mereo-analytics-dagster"
version = "0.1.0"
description = "Orquestração Dagster + dbt para ClickHouse (Mereo analytics POC)"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.9.0",
    "dagster-webserver>=1.9.0",
    "dagster-dbt>=0.25.0",
    "dbt-core>=1.9.0",
    "dbt-clickhouse>=1.8.0",
    "clickhouse-connect>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mereo_analytics"]

[tool.dagster]
module_name = "mereo_analytics.definitions"
code_location_name = "mereo_analytics"
